# rwatch

./: .gitignore  .profile  Cargo.toml  LICENSE  README.md
src/: args_parser.rs  command_executor.rs  main.rs  screen.rs  signals.rs
tests/: smoke.rs  test_windows.rs  windows.rs
